--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,39 @@
 alembic==1.14.1
-aniso8601==10.0.0
 annotated-types==0.7.0
 anyio==4.8.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.8.1
 asyncpg==0.30.0
-attrs==24.3.0
-bcrypt==4.2.1
-blinker==1.9.0
 certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
 click==8.1.8
-colorama==0.4.6
-cryptography==44.0.0
-defusedxml==0.8.0rc2
-Django==5.1.5
-djangorestframework==3.15.2
-djangorestframework_simplejwt==5.4.0
-djoser==2.3.1
 dnspython==2.7.0
-drf-yasg==1.21.8
 email_validator==2.2.0
 fastapi==0.115.8
 fastapi-cli==0.0.7
-fastapi-users==14.0.1
-fastapi-users-db-sqlalchemy==7.0.0
-Flask==3.1.0
-Flask-Cors==5.0.0
-flask-restplus==0.13.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
-inflection==0.5.1
-itsdangerous==2.2.0
 Jinja2==3.1.5
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-makefun==1.15.6
 Mako==1.3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-oauthlib==3.2.2
-packaging==24.2
-pillow==11.1.0
-pwdlib==0.2.1
-pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
-PyJWT==2.10.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
-python3-openid==3.2.0
-pytz==2024.2
 PyYAML==6.0.2
-referencing==0.36.1
-requests==2.32.3
-requests-oauthlib==2.0.0
 rich==13.9.4
 rich-toolkit==0.13.2
-rpds-py==0.22.3
 shellingham==1.5.4
-six==1.17.0
 sniffio==1.3.1
-social-auth-app-django==5.4.2
-social-auth-core==4.5.4
 SQLAlchemy==2.0.37
-sqlparse==0.5.3
 starlette==0.45.3
-swagger_ui==0.1.2
 typer==0.15.1
 typing_extensions==4.12.2
-tzdata==2024.2
-uritemplate==4.1.1
-urllib3==2.3.0
 uvicorn==0.34.0
+uvloop==0.21.0
 watchfiles==1.0.4
 websockets==14.2
-Werkzeug==3.1.3
